CSS bug fixes for: spacing on image/text components, main nav donate button, donation page, highlight color

--- a/Front End Assets/scss/global/_main-navigation.scss
+++ b/Front End Assets/scss/global/_main-navigation.scss
@@ -8,7 +8,7 @@
     }
 
     ul {
-        @include clearfix; 
+        @include clearfix;
         @include remove-list-style;
 
         @media #{$media-desktop-view} {
@@ -36,7 +36,7 @@
                 }
             }
 
-            &.button {
+            &.last { 
                 a {
                     @include button-rounded;
                     @include button-green;
@@ -50,29 +50,27 @@
                 border-top: 1px solid $lightest-gray;
                 display: block;
                 text-align:left;
- 
+
                 &:first-child {
-                    border-top:0; 
+                    border-top:0;
                 }
 
                 &.button {
                     a {
                         color:$white;
-                        border-radius: 0; 
+                        border-radius: 0;
                         display:block;
-                        font-size:17px; 
-                        padding:20px; 
+                        font-size:17px;
+                        padding:20px;
                     }
                 }
 
                 a {
                     display: block;
-                    font-size:17px; 
-                    padding:20px; 
+                    font-size:17px;
+                    padding:20px;
                 }
             }
         }
     }
 }
-
-
